apps-template/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-example
  namespace: placeholder-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-example
  template:
    metadata:
      labels:
        app: api-example
    spec:
      serviceAccountName: api-example-sa
      containers:
        - name: web
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
