apps-template/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-example-svc
  namespace: placeholder-ns
spec:
  type: ClusterIP
  selector:
    app: api-example
  ports:
    - name: http
      port: 80
      targetPort: 80
