apps-template/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-example-route
  namespace: placeholder-ns
spec:
  parentRefs:
    - name: main-aws-alb-gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/example
      backendRefs:
        - name: api-example-svc
          port: 80
